@@ -12,6 +12,10 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 5/21/15
 ---------------------
 
+3/1/16
+    - Put checks in loadmd() and most() to require internal bus ordering
+      for mpc, plus explicit notes in documentation.
+
 2/26/16
     - Rename example files in most/t to start with ex_ instead of eg_.
 
